user_profile: Align the title header of the modal and fix edit button.
This commit unsets the padding of the bot icon and, as the anchor
tag has been replaced with the i tag, we have also set the color
and pointer. This is done so that when the user hovers over the
icon, it will appear as a clickable button.

--- a/web/styles/modal.css
+++ b/web/styles/modal.css
@@ -60,11 +60,21 @@
     padding-right: 1rem;
     max-width: 80%;
     display: flex;
+    align-items: center;
 
     .user_profile_name {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+    }
+
+    #user_profile_manage_others_edit_button {
+        color: hsl(200deg 100% 50%);
+        cursor: pointer;
+
+        &:hover {
+            color: hsl(200deg 79% 66%);
+        }
     }
 }
 
