--- a/web/styles/popovers.css
+++ b/web/styles/popovers.css
@@ -471,7 +471,7 @@ ul {
     }
 
     .zulip-icon.zulip-icon-bot {
-        padding: 3px 0 0;
+        padding: unset;
     }
 
     #default-section {
